Fixed comments after review