@@ -1,22 +1,19 @@
 package ru.practicum.shareit.booking;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import ru.practicum.shareit.booking.dto.BookingDto;
+import ru.practicum.shareit.booking.dto.BookingResponseDto;
+import ru.practicum.shareit.exceptions.ForbiddenException;
 import ru.practicum.shareit.exceptions.NotFoundException;
 import ru.practicum.shareit.item.ItemService;
 import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.user.User;
 import ru.practicum.shareit.user.UserService;
 
-import java.nio.file.AccessDeniedException;
 import java.time.LocalDateTime;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,7 +24,7 @@ public class BookingServiceImpl implements BookingService {
     private final ItemService itemService;
 
     @Override
-    public ResponseEntity<Map<String, Object>> addBooking(Long userId, BookingDto bookingDto) {
+    public BookingResponseDto addBooking(Long userId, BookingDto bookingDto) {
         if (bookingDto.getItemId() == null) {
             throw new IllegalArgumentException("ID объекта Item не может быть null");
         }
@@ -44,15 +41,11 @@ public class BookingServiceImpl implements BookingService {
         }
 
         if (bookingDto.getStart().isBefore(LocalDateTime.now())) {
-            Map<String, Object> errorResponse = new HashMap<>();
-            errorResponse.put("message", "Дата начала бронирования не может быть в прошлом");
-            return new ResponseEntity<>(errorResponse, HttpStatus.BAD_REQUEST);
+            throw new IllegalArgumentException("Дата начала бронирования не может быть в прошлом");
         }
 
         if (bookingDto.getStart().isEqual(bookingDto.getEnd())) {
-            Map<String, Object> errorResponse = new HashMap<>();
-            errorResponse.put("message", "Дата начала бронирования не может быть равна дате окончания");
-            return new ResponseEntity<>(errorResponse, HttpStatus.BAD_REQUEST);
+            throw new IllegalArgumentException("Дата начала бронирования не может быть равна дате окончания");
         }
 
         Booking booking = new Booking();
@@ -63,64 +56,39 @@ public class BookingServiceImpl implements BookingService {
         booking.setStatus(BookingStatus.WAITING);
 
         Booking savedBooking = bookingRepository.save(booking);
-
-        return ResponseEntity.ok(toResponse(savedBooking));
+        return toResponse(savedBooking);
     }
 
     @Override
-    public ResponseEntity<Map<String, Object>> updateBookingStatus(Long bookingId, Long ownerId, boolean approved)
-            throws AccessDeniedException {
+    public BookingResponseDto updateBookingStatus(Long bookingId, Long ownerId, boolean approved) {
         Booking booking = bookingRepository.findById(bookingId)
-                                           .orElseThrow(() -> new NotFoundException("Бронирование не найдено"));
+                .orElseThrow(() -> new NotFoundException("Бронирование не найдено"));
 
-        if (!booking.getItem().getOwnerId().equals(ownerId)) {
-            throw new AccessDeniedException("Нет доступа поменять статус бронирования");
+        if (!booking.getItem().getOwner().getId().equals(ownerId)) {
+            throw new ForbiddenException("Нет доступа поменять статус бронирования");
         }
 
-        BookingStatus status;
-        if (approved) {
-            status = BookingStatus.APPROVED;
-        } else {
-            status = BookingStatus.REJECTED;
-        }
-        booking.setStatus(status);
-        return ResponseEntity.ok(toResponse(bookingRepository.save(booking)));
+        booking.setStatus(approved ? BookingStatus.APPROVED : BookingStatus.REJECTED);
+        return toResponse(bookingRepository.save(booking));
     }
 
-
     @Override
-    public ResponseEntity<Map<String, Object>> getBookingById(Long bookingId, Long userId) {
+    public BookingResponseDto getBookingById(Long bookingId, Long userId) {
         Booking booking = bookingRepository.findById(bookingId)
-                                           .orElseThrow(() -> new NotFoundException("Бронирование не найдено"));
-        return ResponseEntity.ok(toResponse(booking));
+                .orElseThrow(() -> new NotFoundException("Бронирование не найдено"));
+        return toResponse(booking);
     }
 
     @Override
-    public ResponseEntity<List<Map<String, Object>>> getUserBookings(Long userId, String state) {
-        return ResponseEntity.ok(
-                filterBookingsByState(bookingRepository.findAllByBookerId(userId), state).stream()
-                                                                                         .map(this::toResponse)
-                                                                                         .toList()
-        );
+    public List<BookingResponseDto> getUserBookings(Long userId, String state) {
+        List<Booking> bookings = filterBookingsByState(bookingRepository.findAllByBookerId(userId), state);
+        return bookings.stream().map(this::toResponse).collect(Collectors.toList());
     }
 
     @Override
-    public ResponseEntity<List<Map<String, Object>>> getOwnerBookings(Long ownerId, String state) {
-        try {
-            List<Booking> bookings = filterBookingsByState(bookingRepository.findAllByItemOwnerId(ownerId), state);
-            if (bookings.isEmpty()) {
-                throw new NotFoundException("Нет бронирований для пользователя с id " + ownerId);
-            }
-
-            List<Map<String, Object>> responseList = bookings.stream()
-                                                             .map(this::toResponse)
-                                                             .toList();
-            return ResponseEntity.ok(responseList);
-        } catch (NotFoundException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Collections.singletonList(Map.of("error", e.getMessage())));
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Collections.singletonList(Map.of("error", e.getMessage())));
-        }
+    public List<BookingResponseDto> getOwnerBookings(Long ownerId, String state) {
+        List<Booking> bookings = filterBookingsByState(bookingRepository.findAllByItemOwnerId(ownerId), state);
+        return bookings.stream().map(this::toResponse).collect(Collectors.toList());
     }
 
     private List<Booking> filterBookingsByState(List<Booking> bookings, String state) {
@@ -135,19 +103,15 @@ public class BookingServiceImpl implements BookingService {
         };
     }
 
-    private Map<String, Object> toResponse(Booking booking) {
-        return Map.of(
-                "id", booking.getId(),
-                "start", booking.getStart(),
-                "end", booking.getEnd(),
-                "status", booking.getStatus(),
-                "item", Map.of(
-                        "id", booking.getItem().getId(),
-                        "name", booking.getItem().getName()
-                ),
-                "booker", Map.of(
-                        "id", booking.getBooker().getId()
-                )
+    private BookingResponseDto toResponse(Booking booking) {
+        return new BookingResponseDto(
+                booking.getId(),
+                booking.getStart(),
+                booking.getEnd(),
+                booking.getStatus(),
+                booking.getItem().getId(),
+                booking.getItem().getName(),
+                booking.getBooker().getId()
         );
     }
 }
